refractor: added links to anchor tags

--- a/index.html
+++ b/index.html
@@ -24,23 +24,41 @@
         placeholder="Search for products"
       />
       <ul class="arima_madurai_100">
-        <li><a href="#">Wishlist</a></li>
-        <li><a href="#">Cart</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Login</a></li>
+        <li>
+          <a href="/components/product-listing/wishlistPage/wishlist.html"
+            >Wishlist</a
+          >
+        </li>
+        <li><a href="/components/cart/cart.html">Cart</a></li>
+        <li><a href="/authentication/signUpPage/signup.html">Profile</a></li>
+        <li><a href="/authentication/loginPage/login.html">Login</a></li>
       </ul>
     </header>
     <section class="category flex-sa flex-gap zindex-1">
-      <a href="">
+      <a href="/components/product-listing/product.html">
         <span class="items">FACE</span>
       </a>
-      <a href=""><span class="items">BODY</span></a>
-      <a href=""><span class="items">HAIR</span></a>
-      <a href=""><span class="items">MEN</span></a>
-      <a href=""><span class="items">COMBOS</span></a>
-      <a href=""><span class="items">SPECIAL</span></a>
-      <a href=""><span class="items">LIFE</span></a>
-      <a href=""><span class="items">BLOG</span></a>
+      <a href="/components/product-listing/product.html"
+        ><span class="items">BODY</span></a
+      >
+      <a href="/components/product-listing/product.html"
+        ><span class="items">HAIR</span></a
+      >
+      <a href="/components/product-listing/product.html"
+        ><span class="items">MEN</span></a
+      >
+      <a href="/components/product-listing/product.html"
+        ><span class="items">COMBOS</span></a
+      >
+      <a href="/components/product-listing/product.html"
+        ><span class="items">SPECIAL</span></a
+      >
+      <a href="/components/product-listing/product.html"
+        ><span class="items">LIFE</span></a
+      >
+      <a href="/components/product-listing/product.html"
+        ><span class="items">BLOG</span></a
+      >
     </section>
     <main>
       <div class="container-img">
@@ -59,7 +77,10 @@
             provided by Mother Nature & made better by us.
           </p>
           <button class="conatiner-description-btn">
-            <a href="" class="remove-anchor-style">
+            <a
+              href="/components/product-listing/product.html"
+              class="remove-anchor-style"
+            >
               <h2 class="arima_madurai">Discover me</h2>
             </a>
           </button>
