--- a/authentication/signUpPage/signup.html
+++ b/authentication/signUpPage/signup.html
@@ -21,10 +21,14 @@
         placeholder="Search for products"
       />
       <ul class="arima_madurai_100">
-        <li><a href="#">Wishlist</a></li>
-        <li><a href="#">Cart</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Login</a></li>
+        <li>
+          <a href="/components/product-listing/wishlistPage/wishlist.html"
+            >Wishlist</a
+          >
+        </li>
+        <li><a href="/components/cart/cart.html">Cart</a></li>
+        <li><a href="/authentication/signUpPage/signup.html">Profile</a></li>
+        <li><a href="/authentication/loginPage/login.html">Login</a></li>
       </ul>
     </header>
 
