code: added links

--- a/authentication/loginPage/login.html
+++ b/authentication/loginPage/login.html
@@ -47,7 +47,11 @@
 
         <button class="login-button">Login</button>
         <p class="crete-new-account">
-          <a href="#" class="crete-new-account">Create New Account</a>
+          <a
+            href="/authentication/signUpPage/signup.html"
+            class="crete-new-account"
+            >Create New Account</a
+          >
         </p>
       </div>
     </main>
