--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@100;200;300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/utilities.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./utilities.css" />
     <title>Vilvah | Skin</title>
   </head>
   <body>
@@ -76,7 +76,7 @@
             natural ingredients <br />
             provided by Mother Nature & made better by us.
           </p>
-          <button class="conatiner-description-btn">
+          <button class="conatiner-description-btn home-page-btn">
             <a
               href="/components/product-listing/product.html"
               class="remove-anchor-style"
